# ozeki

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  slumber.yml
ozeki/: __init__.py  banzuke.py  basho.py  client.py  rikishi.py  themes.py  torikumi.py  tui.py
